--- a/polybar/config
+++ b/polybar/config
@@ -31,12 +31,12 @@ tray-position = right
 tray-padding = 1
 ; tray-padding = 1
 
-padding-right = 2
+; padding-right = 2
 
 ; padding-left = 1
 ; padding-right = 1
 
-module-margin-right = 3
+; module-margin-right = 3
 
 ; font-N = <fontconfig pattern>;<vertical offset>
 font-0 = "Meslo LGS Nerd Font:size=12;3"
@@ -47,8 +47,8 @@ font-1 = "Weather Icons:size=12;3"
 ; module-margin = 1
 separator-foreground = #75715E ;${colors.disabled}
 modules-left = i3
-modules-center = date openweathermap-simple
-modules-right = pulseaudio memory cpu temperature network
+modules-center = date space openweathermap-simple
+modules-right = pulseaudio space memory space cpu space  temperature space  network space
 
 [module/date]
 type = internal/date
@@ -212,12 +212,20 @@ format-packetloss = <animation-packetloss> <label-connected>
 
 ; Only applies if <ramp-signal> is used
 ramp-signal-foreground = ${module/network.label-connected-foreground}
+# only 2, cuz i guess we need font awesome pro...
 ramp-signal-0 = 直
 ramp-signal-1 = 直
 ramp-signal-2 = 直
 ramp-signal-3 = 
 ramp-signal-4 = 
 ramp-signal-5 = 
+
+; ramp-signal-0 = 1
+; ramp-signal-1 = 2
+; ramp-signal-2 = 3
+; ramp-signal-3 = 4
+; ramp-signal-4 = 5
+; ramp-signal-5 = 6
 
 
 ; Only applies if <animation-packetloss> is used
@@ -321,6 +329,10 @@ format = %{F#f5ef42}<label>%{F-}
 
 ; format-background = #F92672
 ; format-foregroud = #f5ef42
+
+[module/space]
+type = custom/text
+content = "  "
 
 
 [settings]
