--- a/i3/config
+++ b/i3/config
@@ -48,11 +48,11 @@ bindsym Mod4+b split v
 # bindsym $mod+Ctrl+2 [class="^strawberry$"] focus
 # bindsym $mod+Ctrl+2 workspace $ws5
 # bindsym $mod+Ctrl+3 workspace $ws6
-bindsym $mod+Ctrl+4 workspace $ws4
-bindsym $mod+Ctrl+5 workspace $ws5
-bindsym $mod+Ctrl+6 workspace $ws6
-bindsym $mod+Ctrl+7 workspace $ws7
-bindsym $mod+Ctrl+8 workspace $ws8
+# bindsym $mod+Ctrl+4 workspace $ws4
+# bindsym $mod+Ctrl+5 workspace $ws5
+# bindsym $mod+Ctrl+6 workspace $ws6
+# bindsym $mod+Ctrl+7 workspace $ws7
+# bindsym $mod+Ctrl+8 workspace $ws8
 
 #####################
 # workspace layout: #
@@ -422,7 +422,8 @@ for_window [class="^Steam$" title="^Screenshot Uploader$"] floating enable
 for_window [class="^Steam$" title="^Steam Guard - Computer Authorization Required$"] floating enable
 for_window [class="^Steam$" title="^Steam - System Information$"] floating enable
 for_window [class="^steam_app_1680000$"] floating enable
-assign [class="^steam_app_1680000$"] $ws7
+for_window [class="^steam_app_1680000$"] focus
+assign [class="^steam_app_1680000$"] $ws8
 
 for_window [class="^Nitrogen$"] floating enable
 for_window [class="^flameshot$"] floating enable
