--- a/i3/config
+++ b/i3/config
@@ -81,6 +81,8 @@ hide_edge_borders smart
 
 workspace_auto_back_and_forth yes
 
+popup_during_fullscreen smart
+
 # Set inner/outer gaps
 # gaps inner 6
 # gaps outer 3
@@ -492,7 +494,8 @@ exec --no-startup-id dex --autostart --environment i3
 # exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # start blueberry app for managing bluetooth devices from tray:
-exec --no-startup-id blueberry-tray
+
+# exec --no-startup-id blueberry-tray
 
 # transparency
 # uncomment one of them to be used (picom package is installed per default)
