--- a/i3/config
+++ b/i3/config
@@ -424,7 +424,7 @@ for_window [class="^Steam$" title="^Screenshot Uploader$"] floating enable
 for_window [class="^Steam$" title="^Steam Guard - Computer Authorization Required$"] floating enable
 for_window [class="^Steam$" title="^Steam - System Information$"] floating enable
 for_window [class="^steam_app_1680000$"] floating enable
-for_window [class="^steam_app_1680000$"] focus
+# for_window [class="^steam_app_1680000$"] focus
 assign [class="^steam_app_1680000$"] $ws8
 
 for_window [class="^Nitrogen$"] floating enable
