--- a/Preferences.sublime-settings.json
+++ b/Preferences.sublime-settings.json
@@ -4,7 +4,7 @@
 	"highlight_modified_tabs": true,
 	"scroll_speed": 1.0,
 	"color_scheme": "Packages/Color Scheme - Default/Monokai.sublime-color-scheme",	
-	"font_face": "MesloLGS NF",
+	"font_face": "Meslo LGS Nerd Font",
 	"save_on_focus_lost": true,
 	// "ui_scale": 1.5,
 }
