--- a/VSCodeSettings.json
+++ b/VSCodeSettings.json
@@ -39,4 +39,5 @@
     "[html]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
     },
+    "pasteImage.path": "${currentFileDir}/images/",
 }
