--- a/VSCodeSettings.json
+++ b/VSCodeSettings.json
@@ -39,5 +39,11 @@
     "[html]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
     },
+    "[dockerfile]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker",
+    },
+    "files.associations": {
+        ".env*": "dotenv",
+    },
     "pasteImage.path": "${currentFileDir}/images/",
 }
