--- a/starship.toml
+++ b/starship.toml
@@ -7,26 +7,42 @@ $git_commit\
 $git_state\
 $git_metrics\
 $git_status\
-\
-$fill\
-$status\
-$cmd_duration\
-$time\
-$battery\
-\
-$line_break\
 $character\
 """
 
 command_timeout = 850
+add_newline = false
 
-# # If we want to use right prompt instead of fill
-# right_format = """
+# If we want to use right prompt instead of fill
+right_format = """
+$status\
+$cmd_duration\
+$time\
+$battery\
+"""
+
+# # 2 line prompt
+# format = """
+# $username\
+# $hostname\
+# $directory\
+# $git_branch\
+# $git_commit\
+# $git_state\
+# $git_metrics\
+# $git_status\
+# \
+# $fill\
 # $status\
 # $cmd_duration\
 # $time\
 # $battery\
+# \
+# $line_break\
+# $character\
 # """
+# add_newline = true
+
 
 [fill]
 symbol = " "
