--- a/VSCodeSettings.json
+++ b/VSCodeSettings.json
@@ -1,49 +1,68 @@
 {
-    "editor.cursorBlinking": "phase",
-    "editor.cursorSmoothCaretAnimation": true,
-    "editor.fontFamily": "'FiraCode Nerd Font', 'MesloLGS NF', 'Monofur Nerd Font'",
-    "editor.fontLigatures": true,
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true,
-    "editor.minimap.renderCharacters": false,
-    "editor.renderWhitespace": "boundary",
-    "editor.scrollBeyondLastLine": false,
-    "editor.smoothScrolling": true,
-    "editor.tabCompletion": "on",
-    "editor.trimAutoWhitespace": true,
-    "explorer.openEditors.visible": 0,
-    "explorer.sortOrder": "modified",
-    "files.autoSave": "afterDelay",
-    "files.trimTrailingWhitespace": true,
-    "search.showLineNumbers": true,
-    "search.smartCase": true,
-    "security.workspace.trust.banner": "never",
-    "security.workspace.trust.enabled": false,
-    "security.workspace.trust.startupPrompt": "never",
-    "security.workspace.trust.untrustedFiles": "open",
-    "terminal.integrated.cursorStyle": "line",
-    "terminal.integrated.fontFamily": "'FiraCode Nerd Font', 'MesloLGS Nerd Font', 'Monofur Nerd Font'",
-    "terminal.integrated.fontSize": 14,
-    "update.mode": "none",
-    "window.newWindowDimensions": "maximized",
-    "window.zoomLevel": 1,
-    "workbench.colorTheme": "Monokai",
-    "workbench.editor.enablePreview": false,
-    "workbench.editor.highlightModifiedTabs": true,
-    "workbench.list.smoothScrolling": true,
-    "workbench.sideBar.location": "right",
-    "workbench.startupEditor": "newUntitledFile",
-    "editor.minimap.enabled": false,
-    "path-autocomplete.triggerOutsideStrings": true,
-    "html.suggest.html5": true,
-    "[html]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-    },
-    "[dockerfile]": {
-        "editor.defaultFormatter": "ms-azuretools.vscode-docker",
-    },
-    "files.associations": {
-        ".env*": "dotenv",
-    },
-    "pasteImage.path": "${currentFileDir}/images/",
+  "editor.cursorBlinking": "phase",
+  "editor.cursorSmoothCaretAnimation": true,
+  "editor.fontFamily": "'FiraCode Nerd Font', 'MesloLGS NF', 'Monofur Nerd Font'",
+  "editor.fontLigatures": true,
+  "editor.formatOnSave": true,
+  "editor.formatOnType": true,
+  "editor.minimap.renderCharacters": false,
+  "editor.renderWhitespace": "boundary",
+  "editor.scrollBeyondLastLine": false,
+  "editor.smoothScrolling": true,
+  "editor.tabCompletion": "on",
+  "editor.trimAutoWhitespace": true,
+  "explorer.openEditors.visible": 0,
+  "explorer.sortOrder": "modified",
+  "files.autoSave": "onFocusChange",
+  "files.trimTrailingWhitespace": true,
+  "search.showLineNumbers": true,
+  "search.smartCase": true,
+  "security.workspace.trust.banner": "never",
+  "security.workspace.trust.enabled": false,
+  "security.workspace.trust.startupPrompt": "never",
+  "security.workspace.trust.untrustedFiles": "open",
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.fontFamily": "'FiraCode Nerd Font', 'MesloLGS Nerd Font', 'Monofur Nerd Font'",
+  "terminal.integrated.fontSize": 14,
+  "update.mode": "none",
+  "window.newWindowDimensions": "maximized",
+  "workbench.colorTheme": "Monokai",
+  "workbench.editor.enablePreview": false,
+  "workbench.editor.highlightModifiedTabs": true,
+  "workbench.list.smoothScrolling": true,
+  "workbench.startupEditor": "newUntitledFile",
+  "editor.minimap.enabled": false,
+  "path-autocomplete.triggerOutsideStrings": true,
+  "html.suggest.html5": true,
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[dockerfile]": {
+    "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+  },
+  "files.associations": {
+    ".env*": "dotenv"
+  },
+  "pasteImage.path": "${currentFileDir}/images/",
+  "dashboard.projectData": null,
+  "latex-workshop.view.pdf.viewer": "tab",
+  "editor.linkedEditing": true,
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.sideBar.location": "right",
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "haskell.manageHLS": "PATH",
+  "terminal.integrated.enableMultiLinePasteWarning": false,
+  "window.zoomLevel": 1,
+  "markdown.experimental.validate.enabled": true,
 }
