--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,20 +1,21 @@
-profile=gpu-hq
-vo=gpu
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-video-sync=display-resample
-interpolation
-tscale=oversample
-keep-open=yes
-osd-bar=no
+# profile=gpu-hq
+# vo=gpu
+# scale=ewa_lanczossharp
+# cscale=ewa_lanczossharp
+# video-sync=display-resample
+# interpolation
+# tscale=oversample
+# keep-open=yes
+# osd-bar=no
 
 demuxer-mkv-subtitle-preroll=yes
 sub-auto=fuzzy
-slang=enm,en,eng
+# last few doesn't work...
+slang=enm,en,eng,[enm],[en],[eng]
 alang=ja,jp,jpn,en,eng
 
 --screenshot-template="%F%n-%p"
---screenshot-directory="/home/stephen/Pictures/screenshots"
+--screenshot-directory="/home/stephen/Pictures/Screenshots"
 
 #
 # Example mpv configuration file
