--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -5,6 +5,7 @@
 ##
 ## Generally, it's recommended to use this as reference-only.
 ##
+ctrl+r cycle_values video-rotate "90" "180" "270" "0"
 
 c script-message-to crop toggle-crop
 
