--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,19 +1,19 @@
-# profile=gpu-hq
-# vo=gpu
+profile=gpu-hq
+vo=gpu
 # scale=ewa_lanczossharp
 # cscale=ewa_lanczossharp
 # video-sync=display-resample
-# interpolation
+interpolation
 # tscale=oversample
 # keep-open=yes
 # osd-bar=no
+# video-sync=display-resample
 
 demuxer-mkv-subtitle-preroll=yes
 sub-auto=fuzzy
 # last few doesn't work...
 slang=enm,en,eng,[enm],[en],[eng]
 alang=ja,jp,jpn,en,eng
-
 --screenshot-template="%F%n-%p"
 --screenshot-directory="/home/stephen/Pictures/Screenshots"
 
