--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -28,6 +28,11 @@ set-option -g renumber-windows on
 
 # idk, colors I think
 set-option -sa terminal-overrides ",xterm*:Tc"
+# Undercurl. idk what this is from, but this doesn't really work...
+# nvm, found from https://github.com/folke/tokyonight.nvim
+# set -g default-terminal "${TERM}"
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -39,6 +44,36 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # when splitting pane, keep directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+# But this is the nvim version https://github.com/alexghergh/nvim-tmux-navigation
+
+# # decide whether we're in a Vim process
+# # commenting out for now to fix ctrl-backspace for bash
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+#
+# bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+# bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+# bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+# bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+#
+# tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+#
+# if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+#     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+# if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+#     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+#
+# bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
+#
+# bind-key -T copy-mode-vi 'C-h' select-pane -L
+# bind-key -T copy-mode-vi 'C-j' select-pane -D
+# bind-key -T copy-mode-vi 'C-k' select-pane -U
+# bind-key -T copy-mode-vi 'C-l' select-pane -R
+# bind-key -T copy-mode-vi 'C-\' select-pane -l
+# bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
