--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -41,6 +41,9 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+# for keyboard swipe
+bind-key -n C-NPage next-window
+bind-key -n C-PPage previous-window
 
 # when splitting pane, keep directory
 # I don't think this is needed with tmux-pain-control
