--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -44,6 +44,9 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # for keyboard swipe
 bind-key -n C-NPage next-window
 bind-key -n C-PPage previous-window
+# fix home and end
+bind-key -n Home send Escape "[H"
+bind-key -n End send Escape "[F" 
 
 # when splitting pane, keep directory
 # I don't think this is needed with tmux-pain-control
