Update tmux and scripts

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -87,6 +87,11 @@ bind-key 'j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind-key 'k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
 bind-key 'l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
 
+bind-key Left if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key Down if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key Up if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key Right if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
