--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -111,5 +111,5 @@ bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
 set -g default-terminal "alacritty"
 
-# make new window next to current window
-bind c new-window -a
+## make new window next to current window
+# bind c new-window -a
