--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -8,13 +8,17 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @override_copy_command 'xclip -in -selection clipboard'
+# set -g @override_copy_command 'xclip -in -selection clipboard'
 # set -g @yank_selection 'secondary'
+# set -g @yank_selection 'primary'
 # powerline at bottom
+
+
 set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-boot 'on'
+# wayland makes this tricky
+set -g @continuum-boot 'off'
 set -g @continuum-restore 'on'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
@@ -107,6 +111,9 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
+
+## Prevent from exiting copy mode when dragging with mouse
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection -x
 
 
 set -g default-terminal "alacritty"
