Update a lot of files

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -6,8 +6,9 @@
 ## Generally, it's recommended to use this as reference-only.
 ##
 ctrl+r cycle_values video-rotate "90" "180" "270" "0"
+ctrl+c ignore
 
-c script-message-to crop toggle-crop
+shift+c script-message-to crop toggle-crop
 
 RIGHT seek +5 exact
 LEFT seek -5 exact
@@ -59,8 +60,8 @@ MBTN_FORWARD  playlist-next
 Ctrl+LEFT   ignore
 Ctrl+RIGHT  ignore
 # Adjust timing to previous/next subtitle
-Ctrl+Shift+LEFT ignore
-Ctrl+Shift+RIGHT ignore
+# Ctrl+Shift+LEFT ignore
+# Ctrl+Shift+RIGHT ignore
 # Move video rectangle
 Alt+left  ignore
 Alt+right ignore
