--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -57,9 +57,9 @@ bind-key -n End send Escape "[F"
 # bind '"' split-window -v -c "#{pane_current_path}"
 # bind % split-window -h -c "#{pane_current_path}"
 
-# set ctrl-a as prefix key as well
-set-option -g prefix2 C-a
-bind C-a send-prefix -2
+# # set ctrl-a as prefix key as well
+# set-option -g prefix2 C-a
+# bind C-a send-prefix -2
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
