--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -18,9 +18,11 @@ set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 # wayland makes this tricky
-set -g @continuum-boot 'off'
+# set -g @continuum-boot 'on' # doesn't work cuz https://github.com/tmux-plugins/tmux-resurrect/issues/332
+set -g @continuum-systemd-start-cmd 'start-server'
 set -g @continuum-restore 'on'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @resurrect-processes 'false'
 
 set -g mouse on
 
