--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -1,26 +1,56 @@
-[colors.bright]
-black = "0x72696a"
-blue = "0xf38d70"
-cyan = "0x85dacc"
-green = "0xadda78"
-magenta = "0xa8a9eb"
-red = "0xfd6883"
-white = "0xfff1f3"
-yellow = "0xf9cc6c"
+# Colors (Gruvbox dark)
 
-[colors.normal]
-black = "0x2c2525"
-blue = "0xf38d70"
-cyan = "0x85dacc"
-green = "0xadda78"
-magenta = "0xa8a9eb"
-red = "0xfd6883"
-white = "0xfff1f3"
-yellow = "0xf9cc6c"
-
+# Default colors
 [colors.primary]
-background = "0x2D2A2E"
-foreground = "0xfff1f3"
+# hard contrast background = = '#1d2021'
+background = '#282828'
+# soft contrast background = = '#32302f'
+foreground = '#ebdbb2'
+
+# Normal colors
+[colors.normal]
+black = '#282828'
+red = '#cc241d'
+green = '#98971a'
+yellow = '#d79921'
+blue = '#458588'
+magenta = '#b16286'
+cyan = '#689d6a'
+white = '#a89984'
+
+# Bright colors
+[colors.bright]
+black = '#928374'
+red = '#fb4934'
+green = '#b8bb26'
+yellow = '#fabd2f'
+blue = '#83a598'
+magenta = '#d3869b'
+cyan = '#8ec07c'
+white = '#ebdbb2'
+# [colors.bright]
+# black = "0x72696a"
+# blue = "0xf38d70"
+# cyan = "0x85dacc"
+# green = "0xadda78"
+# magenta = "0xa8a9eb"
+# red = "0xfd6883"
+# white = "0xfff1f3"
+# yellow = "0xf9cc6c"
+#
+# [colors.normal]
+# black = "0x2c2525"
+# blue = "0xf38d70"
+# cyan = "0x85dacc"
+# green = "0xadda78"
+# magenta = "0xa8a9eb"
+# red = "0xfd6883"
+# white = "0xfff1f3"
+# yellow = "0xf9cc6c"
+#
+# [colors.primary]
+# background = "0x2D2A2E"
+# foreground = "0xfff1f3"
 
 [env]
 TERM = "alacritty"
