Fix inputactions and add zsh-vi clipboard

--- a/dot_config/inputactions/config.yaml
+++ b/dot_config/inputactions/config.yaml
@@ -1,9 +1,11 @@
+# find shortcut names: qdbus org.kde.kglobalaccel /component/kwin org.kde.kglobalaccel.Component.shortcutNames
 touchpad:
   gestures:
     - type: swipe
       direction: right
       fingers: 3
       actions:
+        # not sure why, but need to set this to `end`, otherwise, the default gestures take over
         - on: end
           # Source https://github.com/torvalds/linux/blob/master/include/uapi/linux/input-event-codes.h
           # 29 = KEY_LEFTCTRL, 109 = KEY_PAGEDOWN
@@ -13,6 +15,7 @@ touchpad:
       direction: left
       fingers: 3
       actions:
+        # not sure why, but need to set this to `end`, otherwise, the default gestures take over
         - on: end
           # 29 = KEY_LEFTCTRL, 104 = KEY_PAGEUP
           command: ydotool key 29:1 104:1 104:0 29:0
@@ -21,8 +24,8 @@ touchpad:
       direction: down
       fingers: 3
       actions:
-        - on: end
-          command: qdbus org.kde.kglobalaccel /component/kwin org.kde.kglobalaccel.Component.invokeShortcut "Window Minimize"
+        - on: begin
+          command: qdbus org.kde.kglobalaccel /component/kwin org.kde.kglobalaccel.Component.invokeShortcut "Grid View"
 
     - type: swipe
       direction: up
@@ -35,7 +38,7 @@ touchpad:
       direction: up
       fingers: 4
       actions:
-        - on: end
+        - on: begin
           command: qdbus org.kde.kglobalaccel /component/kwin org.kde.kglobalaccel.Component.invokeShortcut 'Switch One Desktop Up'
 
     - type: swipe
