--- a/dot_config/atuin/config.toml
+++ b/dot_config/atuin/config.toml
@@ -1,3 +1,4 @@
+inline_height = 0
 ## where to store your database, default is your system data directory
 ## linux/mac: ~/.local/share/atuin/history.db
 ## windows: %USERPROFILE%/.local/share/atuin/history.db
