--- a/dot_config/atuin/config.toml
+++ b/dot_config/atuin/config.toml
@@ -53,6 +53,10 @@
 ## leave unspecified to use same mode set in "filter_mode"
 filter_mode_shell_up_key_binding = "session"
 
+secrets_filter = false
+enter_accept = true
+scroll_exits = false
+
 ## which search mode to use when atuin is invoked from a shell up-key binding
 ## the accepted values are identical to those of "search_mode"
 ## leave unspecified to use same mode set in "search_mode"
@@ -135,7 +139,7 @@ inline_height = 0
 
 ## Defaults to true. If enabled, upon hitting enter Atuin will immediately execute the command. Press tab to return to the shell and edit.
 # This applies for new installs. Old installs will keep the old behaviour unless configured otherwise.
-enter_accept = true
+# enter_accept = true
 
 ## Defaults to "emacs".  This specifies the keymap on the startup of `atuin
 ## search`.  If this is set to "auto", the startup keymap mode in the Atuin
