--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -8,6 +8,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
 # set -g @override_copy_command 'xclip -in -selection clipboard'
 # set -g @yank_selection 'secondary'
 # set -g @yank_selection 'primary'
@@ -23,6 +24,7 @@ set -g @continuum-systemd-start-cmd 'start-server'
 set -g @continuum-restore 'on'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @resurrect-processes 'false'
+set-option -g history-limit 99999
 
 set -g mouse on
 
@@ -122,3 +124,5 @@ set -g default-terminal "alacritty"
 
 ## make new window next to current window
 # bind c new-window -a
+
+set-option -g set-titles on
