--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -121,6 +121,8 @@ bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
 
 set -g default-terminal "alacritty"
+# this is needed cuz claude code wasn't getting colors
+set -ga update-environment "COLORTERM"
 
 ## make new window next to current window
 # bind c new-window -a
